# OpenCV

./: build.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/hawk/opencv/: MainActivity.java
app/src/main/java/com/hawk/opencv/opencv/: OpenCVHelper.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
